Fix Max Heap estimation detection on Java 11 (#2258)
Signed-off-by: Jakub Scholz <www@scholzj.com>